--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,7 @@
     },
     "require": {
         "php": ">=8.1",
-        "craftcms/cms": "^4.9.0",
-        "resend/resend-php": "^v0.12.0",
+        "craftcms/cms": "^4.9.0|^5.0.0",
         "symfony/resend-mailer": "^v7.1.0-BETA1"
     },
     "require-dev": {
